[gd_scene load_steps=5 format=2]

[ext_resource path="res://scrap.tscn" type="PackedScene" id=1]
[ext_resource path="res://PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Retrowave 80's Vaporwave - Slice of Paradise _ Royalty Free No Copyright Background Music.mp3" type="AudioStream" id=3]
[ext_resource path="res://menu_theme.tres" type="Theme" id=4]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="Node2D" parent="." instance=ExtResource( 1 )]
scale = Vector2( 2.91764, 2.91764 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.7
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
rect_scale = Vector2( 0.996727, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 447.6
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 445.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 445.0
margin_bottom = 32.0

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_right = 163.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Continue" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 167.0
margin_right = 278.0
margin_bottom = 28.0
size_flags_horizontal = 6
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
shortcut_in_tooltip = false
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_left = 282.0
margin_right = 445.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 445.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 99.0
margin_bottom = 26.0
text = "Volume:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 103.0
margin_right = 431.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -40.0
max_value = -2.0
step = 0.5
value = -3.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 435.0
margin_right = 445.0
margin_bottom = 26.0
rect_min_size = Vector2( 10, 10 )

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 445.0
margin_bottom = 94.0

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_right = 187.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 191.0
margin_right = 254.0
margin_bottom = 28.0
text = "Quit"

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 258.0
margin_right = 445.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 445.0
margin_bottom = 98.0

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/Continue" to="." method="_on_Continue_pressed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer3/Quit" to="." method="_on_Quit_pressed"]
